[button icon fix]:: small change to fix rendering on the button icon on mobile

--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ h6{
 }
 
 .submit-carrot{
-    padding-left: 55%;
+    text-align: right;
     margin: 0px;
     
     font-size:15pt;
